video section overflow fix

--- a/about_page/nila_about_page.css
+++ b/about_page/nila_about_page.css
@@ -32,6 +32,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
 
@@ -40,7 +41,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  overflow: hidden;
 }
 
 .vs-animation-section {
@@ -68,7 +68,6 @@
   position: absolute;
   color: var(--title-color);
   z-index: 1;
-  overflow: hidden;
 }
 
 /* video section */
